# ocaml-memgraph

./: .gitignore  .merlin  CHANGES.md  LICENSE  Makefile  README.md  TODO  _tags  dot.ml  dot.mli  dune  dune-project  index.html  memgraph.mllib  memgraph.opam  memgraph_kitty.opam  repr.ml  repr.mli  test.ml
.github/workflows/: build.yml  workflow.yml
doc/: closures.md
examples/: arrays.ml  closure.ml  dk.ml  exception.ml  lists.ml  object.ml  record.ml  sum.ml  test.ml
examples/array/: example.ml
examples/ast/conj/: example.ml
examples/ast/true/: example.ml
examples/atoms/: example.ml
examples/base/: example.ml
examples/closure/: doc.ml  dune  example.ml  partial.ml
examples/demo/: example.ml
examples/dk/: example.ml
examples/exn/: example.ml
examples/lazy/: example.ml
examples/list/: example.ml
examples/object/: example.ml
examples/record/: dune  example.ml
examples/sum/: example.ml
memgraph/: index.html
memgraph/Memgraph/: index.html
memgraph/Memgraph/Dot/: index.html
memgraph/Memgraph/Repr/: index.html
memgraph_kitty/: index.html
memgraph_kitty/Memgraph_kitty/: index.html
memgraph_kitty/Memgraph_kitty/Poly/: index.html
src/: dot.ml  dot.mli  dune  repr.ml  repr.mli
src/core/: dot.ml  dot.mli  dune  index.mld  repr.ml
src/kitty/: dune  memgraph_kitty.ml  memgraph_kitty.mli
